--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.0.0",
+    "netlify-cli": "^22.1.7",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
+    "supabase": "^2.26.9",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
   }
