--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.5.3",
     "react-router-dom": "^7.6.2",
+    "stripe": "^18.2.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
