--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "motion": "^12.19.2",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
