--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
+    "@mantine/core": "^8.1.3",
+    "@mantine/dates": "^8.1.3",
+    "@mantine/hooks": "^8.1.3",
     "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.10",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "motion": "^12.19.2",
