--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^7.4.0",
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.10",
+    "@tanstack/react-query": "^5.82.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
