--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.5.3",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "stripe": "^18.2.1",
     "swiper": "^11.2.9",
