--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "motion": "^12.19.2",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-calendar": "^6.0.0",
     "react-day-picker": "^9.7.0",
