--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "motion": "^12.19.2",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
