--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.82.0",
+    "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "i18next": "^25.2.1",
@@ -52,7 +53,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
     "supabase": "^2.30.4",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "vite": "^6.3.5"
   }
 }
