--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^25.2.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
+    "lucide-react": "^0.542.0",
     "motion": "^12.19.2",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
