--- a/package.json
+++ b/package.json
@@ -50,11 +50,15 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.0.0",
+    "javascript-obfuscator": "^4.1.1",
     "netlify-cli": "^22.1.7",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
+    "rollup-plugin-obfuscator": "^1.1.0",
     "supabase": "^2.30.4",
     "tailwindcss": "^4.1.11",
-    "vite": "^6.3.5"
+    "terser": "^5.44.0",
+    "vite": "^6.3.5",
+    "vite-plugin-obfuscator": "^1.0.5"
   }
 }
